# vulkan-tech-demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  CompileShaders.bat  CopyResources.bat  README.md  vcpkg.json
include/: app.h  app.hpp  gameobject.h  gameobject.hpp  input.hpp  utils.hpp
include/ecs/: components.hpp
include/render/: buffer.hpp  camera.h  camera.hpp  descriptor.hpp  device.h  device.hpp  frameInfo.hpp  model.h  model.hpp  pipeline.h  pipeline.hpp  renderer.h  renderer.hpp  swapchain.hpp  window.h
include/systems/: base_render_system.hpp  base_system.hpp  imgui_system.hpp  point_light_system.hpp  render_system.hpp  simple_render_system.h  simple_render_system.hpp  world_render_system.hpp
lib/Vulkan-Headers/: .gitignore
scripts/: compile-shaders.bat  compile-shaders.sh  copy-resources.bat  copy-resources.sh
src/: app.cpp  app.h  gameobject.cpp  gameobject.h  gravity_app.cpp  gravity_app.h  input.cpp  input.h  main.cpp
src/ecs/: components.cpp
src/render/: buffer.cpp  camera.cpp  camera.h  descriptor.cpp  device.cpp  device.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  utils.h  window.cpp  window.h
src/shaders/: point_light.frag  point_light.vert  simple.frag  simple.vert  world.frag  world.vert
src/systems/: imgui_system.cpp  point_light_system.cpp  simple_render_system.cpp  simple_render_system.h  world_render_system.cpp
src/utility/: log.cpp  log.h  nameof.h
